// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Node Root node only 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <div
    className="node sc-bdVaJa cbylkp"
  >
    <div
      className="node-details"
      onClick={[Function]}
    >
      <span
        className="ethereum-address-icon node-blockies"
        style={
          Object {
            "backgroundImage": "url()",
            "backgroundSize": "cover",
            "display": "inline-block",
            "height": "25px",
            "width": "25px",
          }
        }
      />
      jefflau.eth
      <div
        className="remove-node"
        onClick={[Function]}
        title="Remove node from list"
      >
        ✖
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Node Root node selected 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <div
    className="node selected sc-bdVaJa cbylkp"
  >
    <div
      className="node-details"
      onClick={[Function]}
    >
      <span
        className="ethereum-address-icon node-blockies"
        style={
          Object {
            "backgroundImage": "url()",
            "backgroundSize": "cover",
            "display": "inline-block",
            "height": "25px",
            "width": "25px",
          }
        }
      />
      jefflau.eth
      <div
        className="remove-node"
        onClick={[Function]}
        title="Remove node from list"
      >
        ✖
      </div>
    </div>
    <div
      className="child-nodes"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots NodesContainer Root node selected with multiple sub domains 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <div
    className="nodes-root"
  >
    <div
      className="nodes-inner"
    >
      <div
        className="node selected sc-bdVaJa cbylkp"
      >
        <div
          className="node-details"
          onClick={[Function]}
        >
          <span
            className="ethereum-address-icon node-blockies"
            style={
              Object {
                "backgroundImage": "url()",
                "backgroundSize": "cover",
                "display": "inline-block",
                "height": "25px",
                "width": "25px",
              }
            }
          />
          jefflau.eth
          <div
            className="remove-node"
            onClick={[Function]}
            title="Remove node from list"
          >
            ✖
          </div>
        </div>
        <div
          className="child-nodes"
        >
          <div
            className="node sc-bdVaJa cbylkp"
          >
            <div
              className="node-details"
              onClick={[Function]}
            >
              <span
                className="ethereum-address-icon node-blockies"
                style={
                  Object {
                    "backgroundImage": "url()",
                    "backgroundSize": "cover",
                    "display": "inline-block",
                    "height": "25px",
                    "width": "25px",
                  }
                }
              />
              4.jefflau.eth
            </div>
          </div>
          <div
            className="node sc-bdVaJa cbylkp"
          >
            <div
              className="node-details"
              onClick={[Function]}
            >
              <span
                className="ethereum-address-icon node-blockies"
                style={
                  Object {
                    "backgroundImage": "url()",
                    "backgroundSize": "cover",
                    "display": "inline-block",
                    "height": "25px",
                    "width": "25px",
                  }
                }
              />
              awesome.jefflau.eth
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <button
      className="css-1opliz7"
      onClick={[Function]}
    >
      stories
    </button>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
